Fix page overflow

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -46,6 +46,7 @@ h6 {
 html,
 body {
 	height: 100%;
+	overflow-x: hidden;
 	line-height: 1;
 	font-size: 16px;
 	font-family: 'TTLakes';
